Fixes header on mobile.

--- a/assets/css/blocs/global.css
+++ b/assets/css/blocs/global.css
@@ -52,3 +52,14 @@ p{
     transform: translate3d(0, 0, 0);
   }
 }
+
+@media only screen and (max-width: 890px) {
+    .slideshow-container {
+        height: 50vh;
+    }
+
+    .firstimage, .secondimage, .thirdimage, .fourthimage, .fifthimage, .siximage, .sevenimage, .eightimage, .nineimage, .tenimage, .elevenimage, .twelveimage{
+      background-size: contain;
+    }
+
+}
